# px2ansi-rs

./: .README.md.swo  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  debug.txt  flake.nix  index.json  perf.data
.cargo/: config.toml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  config.rs  fetch.rs  lib.rs  main.rs  output.rs  render.rs  rotate.rs  terminal.rs
cli/src/commands/: convert.rs  index.rs  list.rs  mod.rs  show.rs
cli/tests/: integration_tests.rs
lib/: Cargo.toml  README.md
lib/benches/: pixels.rs  rendering.rs
lib/src/: cli_enums.rs  color.rs  indexer.rs  lib.rs  rasterize.rs  simd.rs  themes.rs
lib/src/render/: color.rs  mod.rs  options.rs  parallel.rs  pixel.rs  renderer.rs  serial.rs  types.rs  utils.rs
lib/tests/: integration_tests.rs
man/: px2ansi-rs-completions.1  px2ansi-rs-convert.1  px2ansi-rs-index.1  px2ansi-rs-list.1  px2ansi-rs-show.1  px2ansi-rs.1
src/: cli.rs  cli_enums.rs  config.rs  indexer.rs  lib.rs  main.rs  options.rs  rasterize.rs  render.rs
src/commands/: convert.rs  index.rs  list.rs  show.rs
src/render/: mod.rs  types.rs  utils.rs
