[workspace]
members = [
  "lib", # pure library crate
  "cli", # binary + CLI crate
]
resolver = "3"

[workspace.package]
version = "0.4.17"
edition = "2024"
authors = ["T. Sawyer <saylesss87@proton.me>", "Nell Fauveau <nellousan@hotmail.fr> (original Python version)"]
license = "GPL-3.0"
repository = "https://github.com/saylesss88/px2ansi-rs"
readme = "README.md"
keywords = ["ansi", "pixel-art", "terminal", "rasterize", "cli"]
categories = ["command-line-utilities", "multimedia::images", "rendering"]

# ── Shared dependencies ─────────────────────────────────────────────────────
[workspace.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "rayon"] }
anyhow = "1.0"
terminal_size = "0.4.3"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.0"
colored = "3.1.1"
fuzzy-matcher = "0.3.7"
walkdir = "2.5.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
fontdue = "0.9.3"
# CLI-only — only px2ansi-cli inherits these
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.66"
clap_mangen = "0.3.0"
# Path dep: px2ansi-cli depends on the lib
px2ansi = { path = "lib", version = "0.1.1" }

# ── Shared release profile ──────────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
# debug = 1

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

missing_const_for_fn = "allow"
multiple_crate_versions = "allow"
unwrap_used = "warn"
todo = "warn"
dbg_macro = "warn"
panic = "warn"
