[workspace]
members = [
	"lib", # pure library crate
	"cli", # binary + CLI crate
]
default-members = ["lib", "cli"]
resolver = "3"

[workspace.package]
version = "0.5.26"
edition = "2024"
authors = [
	"T. Sawyer <saylesss87@proton.me>",
	"Nell Fauveau <nellousan@hotmail.fr> (original Python version)",
]
license = "GPL-3.0"
repository = "https://github.com/saylesss88/px2ansi-rs"
readme = "README.md"
changelog = "CHANGELOG.md"
keywords = ["ansi", "pixel-art", "oklab", "rasterize", "colorspace"]

# ── Shared dependencies ─────────────────────────────────────────────────────
[workspace.dependencies]
image = {version = "0.25.10", features = [
	"jpeg",
	"png",
], default-features = false}
anyhow = {version = "1.0", default-features = false}
terminal_size = "0.4.4"
serde_json = "1.0.149"
serde = {version = "1.0.228", features = ["derive"], default-features = false}
rand = "0.10.1"
colored = "3.1.1"
fuzzy-matcher = "0.3.7"
walkdir = "2.5.0"
dialoguer = {version = "0.12.0", features = [
	"fuzzy-select",
], default-features = false}
fontdue = {version = "0.9.3", default-features = false}
# CLI-only — only px2ansi-cli inherits these
clap = {version = "4.6.1", features = [
	"derive",
	"help",
	"usage",
], default-features = false}
clap_complete = "4.6.2"
clap_mangen = "0.3.0"
rayon = {version = "1.12.0"}
# Path dep: px2ansi-cli depends on the lib
px2ansi = {path = "lib", version = "0.2.6", default-features = false}
# mimalloc = {version = "0.1", default-features = false}

# ── Shared release profile ──────────────────────────────────────────────────

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[workspace.lints.rust]
# unsafe_code = "warn"
deprecated = "warn"
unused_lifetimes = "warn"
elided_lifetimes_in_paths = "warn"
future_incompatible = {level = "warn", priority = -1}
nonstandard_style = {level = "warn", priority = -1}
rust_2018_idioms = {level = "warn", priority = -1}
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"

[workspace.lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[workspace.lints.clippy]
all = {level = "warn", priority = -1}
correctness = {level = "warn", priority = -1}
suspicious = {level = "warn", priority = -1}
style = {level = "warn", priority = -1}
complexity = {level = "warn", priority = -1}
perf = {level = "warn", priority = -1}
pedantic = {level = "warn", priority = -1}
nursery = {level = "warn", priority = -1}
cargo = {level = "warn", priority = -1}

# allow_attributes = "warn"
# allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
create_dir = "warn"
# expect_used = "warn"
missing_const_for_fn = "allow"
multiple_crate_versions = "allow"
unwrap_used = "warn"
todo = "warn"
dbg_macro = "warn"
panic = "warn"
