[package]
name = "px2ansi-rs"
default-run = "px2ansi-rs"
version = "0.5.21"
edition = "2024"
authors = ["T. Sawyer <saylesss87@proton.me>"]
license = "GPL-3.0"
repository = "https://github.com/saylesss88/px2ansi-rs"
readme = "../README.md"
keywords = ["ansi", "pixel-art", "oklab", "rasterize", "rgb", "colorspace"]
categories = ["command-line-utilities", "multimedia::images", "rendering"]
description = "CLI frontend for the px2ansi terminal art engine"
include = ["src/**/*", "Cargo.toml", "../README.md", "../LICENSE"]

[[bin]]
name = "px2ansi-rs"
path = "src/main.rs"

[[bin]]
name = "generate-manpage"
path = "src/bin/generate_manpage.rs"

[dependencies]
px2ansi = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rayon = { version = "1.12.0", optional = true }
colored = { workspace = true }
fuzzy-matcher = { workspace = true }
dialoguer = { workspace = true }
image = { workspace = true }
confy = "2.0.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = { version = "3.0", default-features = false }


[features]
default = ["rasterize", "sixel", "parallel", "simd"]
rasterize = ["px2ansi/rasterize"]
sixel = ["px2ansi/sixel"]
parallel = ["px2ansi/parallel", "dep:rayon"]
simd = ["px2ansi/simd"]
full = ["rasterize", "sixel", "parallel", "simd"]

[lints]
workspace = true
