[package]
name = "px2ansi"
version = "0.2.3"
edition = "2024"
authors = ["T. Sawyer <saylesss87@proton.me>"]
license = "GPL-3.0"
repository = "https://github.com/saylesss88/px2ansi-rs/tree/main/lib"
readme = "README.md"
keywords = ["ansi", "pixel-art", "oklab", "rasterize", "rgb", "colorspace"]
categories = ["command-line-utilities", "multimedia::images", "rendering"]
description = "High-fidelity terminal art engine — ANSI, Braille, Kanji, and more"
include = ["src/**/*", "assets/IosevkaCharonMono-Regular.ttf", "Cargo.toml", "README.md", "LICENSE"]

[package.metadata.docs.rs]
# Document the crate with all features enabled
all-features = true
# Enable the 'docsrs' config so we can use #[doc(cfg(...))]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "px2ansi"
path = "src/lib.rs"

[dependencies]
image = { workspace = true }
anyhow = { workspace = true }
terminal_size = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
fontdue = { workspace = true, optional = true }
thiserror = { version = "2.0.18", default-features = false }
viuer = { version = "0.11.0", optional = true }
rayon = { version = "1.12.0", optional = true }
wide = { version = "1.3.0", optional = true, default-features = false }

[dev-dependencies]
tempfile = { version = "3.27.0", default-features = false }

[lints]
workspace = true

[features]
default = []
rasterize = ["dep:fontdue"]
sixel = ["dep:viuer"]
parallel = ["dep:rayon"]
simd = ["dep:wide"]
# Convenience bundle for users who want everything (and for the CLI)
full = ["rasterize", "sixel", "parallel", "simd"]
