[package]
name = "px2ansi"
version = "0.3.10"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ansi", "pixel-art", "oklab", "rasterize", "colorspace"]
categories = ["command-line-utilities", "multimedia::images", "rendering"]
description = "High-fidelity terminal art engine  ANSI, Braille, Kanji, Sixel, and more"
include = [
	"src/**/*",
	"assets/IosevkaCharonMono-Regular.ttf",
	"Cargo.toml",
	"README.md",
	"LICENSE",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "px2ansi"
path = "src/lib.rs"

[dependencies]
image = {workspace = true}
terminal_size = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
walkdir = {workspace = true}
fontdue = {workspace = true, optional = true}
thiserror = {version = "2.0.18", default-features = false}
icy_sixel = {version = "0.5", optional = true}
rayon = {workspace = true, optional = true}
wide = {version = "1.3.0", optional = true, default-features = false}

[dev-dependencies]
tempfile = {version = "3.27.0", default-features = false}

[lints]
workspace = true

[features]
default = []
rasterize = ["dep:fontdue"]
sixel = ["dep:icy_sixel"]
parallel = ["dep:rayon"]
simd = ["dep:wide"]
# Convenience bundle for users who want everything (and for the CLI)
full = ["rasterize", "sixel", "parallel", "simd"]
